--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,5 +168,7 @@ exclude_lines = [
     "pass",
 ]
 
-[tool.uv.sources]
-provide-foundation = { path = "../provide-foundation", editable = true }
+# [tool.uv.sources]
+# provide-foundation = { path = "../provide-foundation", editable = true }
+# Note: provide-foundation removed from local sources for CI compatibility
+# Will use PyPI version when available
