--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,81 @@
-name: Release
+name: 🚀 Release to PyPI
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - 'v*'
 
 jobs:
-  build-and-publish:
-    runs-on: ubuntu-22.04
+  build:
+    name: 📦 Build Distribution
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-      - name: Set up uv
-        uses: astral-sh/setup-uv@v1
-      - name: Install dependencies
-        run: uv sync --all-extras
-      - name: Install project with dev dependencies
-        run: uv pip install -e .[dev]
-      - name: Build
-        run: uv run python -m build
-      - name: Publish
-        uses: pypa/gh-action-pypi-publish@v1.8.10
+          python-version: '3.11'
+      - name: Install uv
+        run: pip install uv
+      - name: Build package
+        run: uv build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
         with:
-          user: __token__
+          name: dist
+          path: dist/
+
+  test-release:
+    name: 🧪 Test Release to TestPyPI
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+      - name: Publish to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        continue-on-error: true
+
+  release:
+    name: 🚀 Release to PyPI
+    needs: test-release
+    runs-on: ubuntu-latest
+    environment: pypi
+    permissions:
+      id-token: write
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+        continue-on-error: true
+
+  github-release:
+    name: 📋 Create GitHub Release
+    needs: build
+    if: always()
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*
+          generate_release_notes: true
