--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,3 +61,26 @@ jobs:
           source workenv/bin/activate
           pytest --cov=src --cov-report=xml --cov-report=term-missing || echo "Tests completed"
           coverage report --fail-under=80 || echo "Coverage check completed"
+
+  build:
+    name: 📦 Build Package
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: provide-io/ci-tooling/actions/setup-python-env@main
+        with:
+          python-version: '3.11'
+          install-extras: 'dev'
+
+      - name: 📦 Build Package
+        run: |
+          source workenv/bin/activate
+          uv build
+
+      - name: 📤 Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
